16/9/2011

- Changed the format of multiple sequences form space-separated to comma-separated list. Ej:
        seq="on_boot, start"         
        
- Changes in make-iso script (not finished)     


12/9/2011:

- Plugins: 
    + changed OSPF and DHCP plugins to use XML::LibXML instead of XML::DOM
    + added a new function to plugin API: getSeqDescriptions to get descriptions of commands offered by plugins
    + changes to OSPF and DHCP configuration files languages. DTD's translated to XSD.
    + plog function to write log messages in plugins 
    
- vnx:
    + added a new option --exe-info to get a description of the commands available in a virtual scenario. 
      For the plugin commands, the information is obtained by menas of the new function getSeqDescriptions.
      For the user-defined commands, a new tag has been added <seq_help>:
      
        <help>
             <seq_help seq='start-www'>Start apache2 web server</seq_help>
             <seq_help seq='stop-www'>Stop apache2 web server</seq_help>     
        </help>
    + Cleaning of the arguments list

- VNX::Execution: eliminated the redirection to /dev/null in 'execute' in $EXE_NORMAL mode. It provoked problems
  when executing commands like "echo xxxx > file"      
            

1/9/2011:

- Naming conventions: variable names changes to follow the names conventions in 
  http://damienlearnsperl.blogspot.com/2009/03/perl-naming-convention-for-subroutine.html 
  or http://www.perl.com/pub/2000/01/CodingStandards.html.
  All variables and subroutines in lower case with _ separating words (Ej: $vm_name) 

- vmAPI: eliminated the parameters $vm_doc and $counter from startVM. $vm_doc is only needed in 
  vmAPI_uml->startVM, but now it is obtained calling dh->get_vm_doc

- Created a function to write log messages: wlog 
  #
  # Write log message depending on the verbosity level ($execution->get_exe_mode()).
  # Adds a "\n" to the end of the message.  
  # 
  # Call with: 
  #    log (V, "log message")  